--- a/package.json
+++ b/package.json
@@ -20,16 +20,31 @@
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-toggle": "^1.1.9",
+    "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@sentry/nextjs": "^10.0.0",
+    "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.84.0",
+    "@tiptap/extension-code-block-lowlight": "^3.0.9",
+    "@tiptap/extension-color": "^3.0.9",
+    "@tiptap/extension-horizontal-rule": "^3.0.9",
+    "@tiptap/extension-image": "^3.0.9",
+    "@tiptap/extension-text-style": "^3.0.9",
+    "@tiptap/extension-typography": "^3.0.9",
+    "@tiptap/extensions": "^3.0.9",
+    "@tiptap/pm": "^3.0.9",
+    "@tiptap/react": "^3.0.9",
+    "@tiptap/starter-kit": "^3.0.9",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -37,6 +52,7 @@
     "file-type": "^21.0.0",
     "import-in-the-middle": "^1.14.2",
     "jodit-react": "^5.2.19",
+    "lowlight": "^3.3.0",
     "lucide-react": "^0.535.0",
     "next": "15.4.5",
     "next-auth": "^4.24.11",
@@ -47,6 +63,7 @@
     "react": "^19.1.1",
     "react-day-picker": "9.8.1",
     "react-dom": "^19.1.1",
+    "react-medium-image-zoom": "^5.3.0",
     "server-only": "^0.0.1",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
